--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,3 +12,7 @@ AllCops:
     - 'test/application_system_test_case.rb'
     - 'test/test_helper.rb'
   NewCops: enable
+
+Metrics/BlockLength:
+  Exclude:
+    - 'config/environments/*'
