--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,9 @@ services:
   web:
     build: .
     command: bash -c "rm -f tmp/pids/server.pid && bin/dev"
+    environment:
+      DATABASE_USERNAME: postgres
+      DATABASE_PASSWORD: password
     volumes:
       - .:/app
     ports:
