--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "nodemon": "^2.0.22",
     "postcss": "^8.4.24",
     "postcss-cli": "^10.1.0",
-    "sass": "^1.63.6"
+    "sass": "^1.63.6",
+    "watch": "^1.0.2"
   },
   "scripts": {
     "build:css:compile": "sass ./app/assets/stylesheets/application.bootstrap.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules",
