--- a/config/database.yml
+++ b/config/database.yml
@@ -1,16 +1,20 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  host: db
+  host: <%= ENV['DATABASE_HOST'] %>
+  port: <%= ENV['DATABASE_PORT'] %>
   username: <%= ENV['DATABASE_USERNAME'] %>
   password: <%= ENV['DATABASE_PASSWORD'] %>
   pool: 5
 
 development:
   <<: *default
-  database: myapp_development
-
+  database: reglist_development
 
 test:
   <<: *default
-  database: myapp_test
+  database: reglist_test
+
+production:
+  <<: *default
+  database: reglist_production
