--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,9 @@ services:
     environment:
       DATABASE_USERNAME: postgres
       DATABASE_PASSWORD: password
+      DATABASE_HOST: db
+      DATABASE_PORT: 5432
+    image: reglist-web
     volumes:
       - .:/app
     ports:
