REG-7 REG-8 allow non admins to create and edit own tournaments

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -22,5 +22,9 @@ Metrics/BlockLength:
     - 'config/environments/*'
     - 'spec/**/*'
 
+Metrics/ClassLength:
+  Exclude:
+    - 'app/controllers/**/*'
+
 Metrics/MethodLength:
   Max: 20
