--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       POSTGRES_PASSWORD: password
   web:
     build: .
-    command: bash -c "rm -f tmp/pids/server.pid && bin/dev"
+    command: rails server -b 0.0.0.0
     environment:
       DATABASE_USERNAME: postgres
       DATABASE_PASSWORD: password
