--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,7 @@
+require:
+  - rubocop-rails
+  - rubocop-rspec
+
 AllCops:
   Exclude:
     - 'bin/*'
@@ -28,3 +32,13 @@ Metrics/ClassLength:
 
 Metrics/MethodLength:
   Max: 20
+
+Rails/OutputSafety:
+  Exclude:
+    - 'app/helpers/**/*'
+
+RSpec/MultipleExpectations:
+  Max: 3
+
+RSpec/NestedGroups:
+  Max: 4
