--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
           PGHOST: localhost
           PGUSER: reglist
           RAILS_ENV: test
-      - image: cimg/postgres
+      - image: cimg/postgres:15.3.0
         environment:
           POSTGRES_USER: reglist
           POSTGRES_DB: reglist_test
