--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     working_directory: ~/reglist
     docker:
-      - image: cimg/ruby:3.1.4
+      - image: cimg/ruby:3.1.4-node
         environment:
           PGHOST: localhost
           PGUSER: reglist
