--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,4 +39,4 @@ jobs:
       - run: bundle exec rake db:setup
 
       # Run the tests
-      - run: bundle exec rubocop
+      - run: bundle exec rubocop -c .rubocop.yml
