--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,9 @@ services:
     environment:
       POSTGRES_PASSWORD: password
   web:
-    build: .
+    build:
+      context: .
+      dockerfile: 'Dockerfile-dev'
     command: rails server -b 0.0.0.0
     environment:
       DATABASE_USERNAME: postgres
