--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -16,29 +16,7 @@ RUN yarn add @hotwired/stimulus
 
 COPY Gemfile /app/Gemfile
 COPY Gemfile.lock /app/Gemfile.lock
-RUN bundle install --without development test
-
-RUN mkdir /app/log
-COPY config.ru /app/config.ru
-COPY bin /app/bin
-COPY lib /app/lib
-COPY Rakefile /app/Rakefile
-COPY storage /app/storage
-COPY Gemfile /app/
-COPY Gemfile.lock /app/
-COPY package.json /app/
-COPY yarn.lock /app/
-COPY app/assets /app/app/assets
-COPY public /app/public
-COPY db /app/db
-COPY config /app/config
-COPY app/javascript /app/app/javascript
-COPY app/models /app/app/models
-COPY app/helpers /app/app/helpers
-COPY app/controllers /app/app/controllers
-COPY app/views /app/app/views
-
-RUN rails assets:precompile
+RUN bundle install
 
 COPY bin/entrypoint.sh /usr/bin
 RUN chmod +x /usr/bin/entrypoint.sh
