--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,14 @@
 services:
   db:
-    image: postgres
+    image: postgres:14.7
     volumes:
       - ${REGLIST_DB:-./tmp/db}:/var/lib/postgresql/data
     environment:
       POSTGRES_PASSWORD: password
   web:
-    build: .
+    build:
+      context: .
+      dockerfile: 'Dockerfile-dev'
     command: rails server -b 0.0.0.0
     environment:
       DATABASE_USERNAME: postgres
